fix: modify schemas for pageX,pageY to viewportWidth,viewportHeight
